--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "grunt-contrib-compass": "^1.0.0",
     "grunt-contrib-connect": "^0.8.0",
     "grunt-contrib-watch": "^0.6.1",
-    "load-grunt-tasks": "^0.6.0"
+    "load-grunt-tasks": "^0.6.0",
+    "time-grunt": "^1.0.0"
   }
 }
